# LibLyketo

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
ext/: CMakeLists.txt
include/: Config.hpp  Proto.hpp
include/LibLyketo/: CompressAlgorithms.hpp  Config.hpp  CryptedObject.hpp  DefaultAlgorithms.hpp  EterPack.hpp  ICryptedObjectAlgorithm.hpp  IFileSystem.hpp  Interfaces.hpp  Proto.hpp
src/: CompressAlgorithms.cpp  CompressAlgorithms.hpp  Config.cpp  CryptedObject.cpp  DefaultAlgorithms.cpp  EterPack.cpp  Proto.cpp  Utility.hpp  xtea.cpp  xtea.hpp
testapp/: CMakeLists.txt  Config.cpp  Config.hpp  Dump.cpp  Dump.hpp  Log.hpp  Main.cpp  Utility.hpp
testapp/sample/: LyketoCLI.json
